# propsy-health

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  pyproject.toml  requirements.txt
app/: config.py  database.py  google_health_auth.py  i18n.py  main.py
app/api/: admin.py  auth.py  consent.py  dashboard.py  health_data.py
app/auth/: google_oauth.py  token_storage.py
app/core/: encryption.py  language.py  logging.py  security.py  session.py  session_validator.py  templates.py
app/services/: consent_storage.py  google_health.py  health_data_fetcher.py  health_data_storage.py  sync_service.py  token_manager.py
app/static/css/: main.css
app/templates/: base.html  consent.html  contact.html  dashboard.html  data.html  error.html  index.html  privacy.html  success.html  terms.html  withdraw.html
app/templates/admin/: base.html  dashboard.html  login.html  user_detail.html  users.html
