[project]
name = "propsy-health"
version = "1.0.0"
description = "Google Health OAuth Connector for Propsy Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.1",
    "motor>=3.4.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uvicorn]
host = "127.0.0.1"
port = 8000
reload = false
log-level = "info"